CREATE TABLE IF NOT EXISTS SUBSCRIPTION(
		SUBSCRIPTIONID 		SERIAL			NOT NULL,
		ACCOUNTID			INT				NOT NULL,
		SERVICETYPE			VARCHAR(64)		NOT NULL,
		VALIDFROM			TIMESTAMP		NOT NULL,
		VALIDTO				TIMESTAMP,
		
		PRIMARY KEY(SUBSCRIPTIONID),
		FOREIGN KEY(ACCOUNTID) REFERENCES ACCOUNT(ACCOUNTID)
);

DROP INDEX IF EXISTS SUBSCRIPTION_ACC_SERVICE;
CREATE UNIQUE INDEX subscription_acc_service ON Subscription (accountID, serviceType, (validTo IS NULL));
